change js files

--- a/login.html
+++ b/login.html
@@ -5,14 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>请登录</title>
-    <!-- import layui js -->
-    <script src="assets/lib/layui/layui.all.js"></script>
-    <!-- import jq -->
-    <script src="assets/lib/jquery.js"></script>
-    <!-- import baseAPI js -->
-    <script src="assets/js/baseAPI.js"></script>
-    <!-- import login js -->
-    <script src="assets/js/login.js"></script>
     <!-- import layui css -->
     <link rel="stylesheet" href="assets/lib/layui/css/layui.css">
     <!-- import my css -->
@@ -101,6 +93,15 @@
             
         </div>
     </div>
+
+    <!-- import layui js -->
+    <script src="assets/lib/layui/layui.all.js"></script>
+    <!-- import jq -->
+    <script src="assets/lib/jquery.js"></script>
+    <!-- import baseAPI js -->
+    <script src="assets/js/baseAPI.js"></script>
+    <!-- import my login js -->
+    <script src="assets/js/login.js"></script>
 </body>
 
 </html>
