--- a/index.html
+++ b/index.html
@@ -1,94 +1,98 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>layout 后台大布局 - Layui</title>
-  <!-- 导入 layui css -->
-  <link rel="stylesheet" href="assets/lib/layui/css/layui.css">
-  <!-- 导入 iconfont css -->
-  <link rel="stylesheet" href="assets/fonts/iconfont.css">
-  <!-- 导入 my css -->
-  <link rel="stylesheet" href="assets/css/index.css">
-</head>
-<body class="layui-layout-body">
-<div class="layui-layout layui-layout-admin">
-  <div class="layui-header">
-    <img src="assets/images/logo.png" alt="">
-    <!-- 头部区域（可配合layui已有的水平导航） -->
-    
-    <ul class="layui-nav layui-layout-right">
-      <li class="layui-nav-item">
-        <a href="javascript:;" id="user-info">
-          <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-          <span class="user-img"></span>
-        </a>
-        <dl class="layui-nav-child">
-          <dd><a href="">基本资料</a></dd>
-          <dd><a href="">安全设置</a></dd>
-        </dl>
-      </li>
-      <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><i class="iconfont icon-tuichu"></i>退出</a></li>
-    </ul>
-  </div>
-  
-  <div class="layui-side layui-bg-black">
-    <div class="layui-side-scroll">
-      <!-- 左侧头像区域 -->
-      <div id="user-info">
-        <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-        <span class="user-img"></span>
-        <span class="welcome"></span>
-      </div>
-      <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-      <ul class="layui-nav layui-nav-tree" lay-shrink="all">
-          <!-- add icon -->
-        <li class="layui-nav-item">
-            <!-- target属性: 点击时将href对应页面在name为"fm"的元素中打开,class="layui-this"默认选中-->
-            <a href="home/dashboard.html" class="layui-this" target="fm">
-                <i class="iconfont icon-home"></i>首页
-            </a>
-        </li>
-        <li class="layui-nav-item">
-          <a class="" href="javascript:;"><i class="iconfont icon-16"></i>文章管理</a>
-          <dl class="layui-nav-child">
-            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
-            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
-          </dl>
-        </li>
-        <li class="layui-nav-item">
-          <a href="javascript:;"><i class="iconfont icon-user"></i>个人中心</a>
-          <dl class="layui-nav-child">
-            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
-          </dl>
-        </li>
-      </ul>
-    </div>
-  </div>
-  
-  <div class="layui-body">
-    <!-- 内容主体区域 -->
-    <!-- 指定src默认在iframe中打开该路径文件 -->
-    <iframe name="fm" src="home/dashboard.html" frameborder="0"></iframe>
-  </div>
-  
-  <div class="layui-footer">
-    <!-- 底部固定区域 -->
-    © My Blog 
-  </div>
-</div>
 
-<!-- 导入 layui js -->
-<script src="assets/lib/layui/layui.all.js"></script>
-<!-- 导入 jq -->
-<script src="assets/lib/jquery.js"></script>
-<!-- 导入baseAPI.js -->
-<script src="assets/js/baseAPI.js"></script>
-<!-- 导入index.js -->
-<script src="assets/js/index.js"></script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>layout 后台大布局 - Layui</title>
+    <!-- 导入 layui css -->
+    <link rel="stylesheet" href="assets/lib/layui/css/layui.css">
+    <!-- 导入 iconfont css -->
+    <link rel="stylesheet" href="assets/fonts/iconfont.css">
+    <!-- 导入 my css -->
+    <link rel="stylesheet" href="assets/css/index.css">
+</head>
+
+<body class="layui-layout-body">
+    <div class="layui-layout layui-layout-admin">
+        <div class="layui-header">
+            <img src="assets/images/logo.png" alt="">
+            <!-- 头部区域（可配合layui已有的水平导航） -->
+
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item">
+                    <a href="javascript:;" id="user-info">
+                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+                        <span class="user-nav">个人中心</span>
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><i class="iconfont icon-tuichu"></i>退出</a></li>
+            </ul>
+        </div>
+
+        <div class="layui-side layui-bg-black">
+            <div class="layui-side-scroll">
+                <!-- 左侧头像区域 -->
+                <div id="user-info">
+                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+                    <span class="user-img"></span>
+                    <span class="welcome"></span>
+                </div>
+                <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+                <ul class="layui-nav layui-nav-tree" lay-shrink="all">
+                    <!-- add icon -->
+                    <li class="layui-nav-item">
+                        <!-- target属性: 点击时将href对应页面在name为"fm"的元素中打开,class="layui-this"默认选中-->
+                        <a href="home/dashboard.html" class="layui-this" target="fm">
+                            <i class="iconfont icon-home"></i>首页
+                        </a>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a class="" href="javascript:;"><i class="iconfont icon-16"></i>文章管理</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
+                        </dl>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"><i class="iconfont icon-user"></i>个人中心</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="/user/user_info.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+                            <dd><a href="/user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="layui-body">
+            <!-- 内容主体区域 -->
+            <!-- 指定src默认在iframe中打开该路径文件 -->
+            <iframe name="fm" src="home/dashboard.html" frameborder="0"></iframe>
+        </div>
+
+        <div class="layui-footer">
+            <!-- 底部固定区域 -->
+            © My Blog
+        </div>
+    </div>
+
+    <!-- 导入 layui js -->
+    <script src="assets/lib/layui/layui.all.js"></script>
+    <!-- 导入 jq -->
+    <script src="assets/lib/jquery.js"></script>
+    <!-- 导入baseAPI.js -->
+    <script src="assets/js/baseAPI.js"></script>
+    <!-- 导入index.js -->
+    <script src="assets/js/index.js"></script>
 
 </body>
+
 </html>
